recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: ':' expected but ')' found.
override def run(x) { avance(x)
                  ^FourSquare:5: error: identifier expected but '}' found.
}
^