recursion.logo.square.FourSquare.scala.code
override def run(x) { avance(x)
}
run(100)